--- a/FattaangOnlineShopping/Web.config
+++ b/FattaangOnlineShopping/Web.config
@@ -12,7 +12,9 @@
   </appSettings>
   
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog=FattaangDB; Integrated Security=False" providerName="System.Data.SqlClient"/>
+    <!--<add name="ConnectionString" connectionString="Data Source=LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog=FattaangDB; Integrated Security=False" providerName="System.Data.SqlClient"/>-->
+    <add name="ConnectionString" connectionString="Data Source = LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = joshi123; "  
+    providerName="System.Data.SqlClient"/>  <!--Initial Catalog or database , Integrated Security= SSPI for Windows Authentication-->
   </connectionStrings>
   
   
