Display all products and display products by Category

--- a/FattaangOnlineShopping/FattaangOnlineShopping.csproj
+++ b/FattaangOnlineShopping/FattaangOnlineShopping.csproj
@@ -72,6 +72,7 @@
     <Content Include="Images\acc2.jpg" />
     <Content Include="Images\CAccessories.jpg" />
     <Content Include="Images\Denim_collection.jpg" />
+    <Content Include="Images\EmptyCart.jpeg" />
     <Content Include="Images\fatang_ft.jpg" />
     <Content Include="Images\fattaang.jpg" />
     <Content Include="Images\Fattaang_junta.jpg" />
