--- a/FattaangOnlineShopping/FattaangOnlineShopping.csproj
+++ b/FattaangOnlineShopping/FattaangOnlineShopping.csproj
@@ -77,6 +77,7 @@
     <Content Include="Images\fattaang.jpg" />
     <Content Include="Images\Fattaang_junta.jpg" />
     <Content Include="Images\fattaang_logo.png" />
+    <Content Include="Images\green_tick_in_circle.jpg" />
     <Content Include="Images\laptops1 .jpg" />
     <Content Include="Images\shopping-cart-icon.png" />
     <Content Include="Images\Smile.jpg" />
