--- a/FattaangOnlineShopping/Web.config
+++ b/FattaangOnlineShopping/Web.config
@@ -4,20 +4,24 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  
+
   <!--Authentication-->
   <appSettings>
     <add key="AdminLoginID" value="admin"/>
     <add key="AdminPassword" value="12345"/>
+    
+    <!--need a web.config key to enable the pre 4.5 validation mode-->
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
-  
+
   <connectionStrings>
     <!--<add name="ConnectionString" connectionString="Data Source=LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog=FattaangDB; Integrated Security=False" providerName="System.Data.SqlClient"/>-->
-    <add name="ConnectionString" connectionString="Data Source = LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = joshi123; "  
-    providerName="System.Data.SqlClient"/>  <!--Initial Catalog or database , Integrated Security= SSPI for Windows Authentication-->
+    <add name="ConnectionString" connectionString="Data Source = LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = joshi123; "
+    providerName="System.Data.SqlClient"/>
+    <!--Initial Catalog or database , Integrated Security= SSPI for Windows Authentication-->
   </connectionStrings>
-  
-  
+
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
