Remove product/products from MyCart

--- a/FattaangOnlineShopping/FattaangOnlineShopping.csproj
+++ b/FattaangOnlineShopping/FattaangOnlineShopping.csproj
@@ -73,6 +73,7 @@
     <Content Include="Images\CAccessories.jpg" />
     <Content Include="Images\Denim_collection.jpg" />
     <Content Include="Images\EmptyCart.jpeg" />
+    <Content Include="Images\EmptyCart1.jpg" />
     <Content Include="Images\fatang_ft.jpg" />
     <Content Include="Images\fattaang.jpg" />
     <Content Include="Images\Fattaang_junta.jpg" />
