--- a/FattaangOnlineShopping/FattaangOnlineShopping.csproj
+++ b/FattaangOnlineShopping/FattaangOnlineShopping.csproj
@@ -68,6 +68,15 @@
   <ItemGroup>
     <Content Include="Admin\AddEditCategory.aspx" />
     <Content Include="Admin\AddNewProducts.aspx" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="DBSchema\SP_AddNewCategory.sql" />
+    <Content Include="DBSchema\SP_AddNewProduct.sql" />
+    <Content Include="DBSchema\SP_GetAllCategories.sql" />
+    <Content Include="DBSchema\SP_GetAllProducts.sql" />
+    <Content Include="DBSchema\SP_SaveCustomerDetails.sql" />
+    <Content Include="DBSchema\SP_SaveCustomerProducts.sql" />
+    <Content Include="DBSchema\SQLQuery1.sql" />
+    <Content Include="DBSchema\SQLQuery2.sql" />
     <Content Include="Home.aspx" />
     <Content Include="Images\acc2.jpg" />
     <Content Include="Images\CAccessories.jpg" />
