--- a/FattaangOnlineShopping/Web.config
+++ b/FattaangOnlineShopping/Web.config
@@ -10,6 +10,12 @@
     <add key="AdminLoginID" value="admin"/>
     <add key="AdminPassword" value="12345"/>
     
+    <add key="Host" value="smtp.gmail.com"/>
+    <add key="EnableSsl" value="true"/>
+    <add key="UserName" value="EmailId@gmail.com"/>  <!--value="EmailId@gmail.com"-->
+    <add key="Password" value="Password"/>  <!--value="Password"-->
+    <add key="Port" value="587"/>
+    
     <!--need a web.config key to enable the pre 4.5 validation mode-->
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
