redirect to home when clicked on website name

--- a/FattaangOnlineShopping/Web.config
+++ b/FattaangOnlineShopping/Web.config
@@ -12,8 +12,8 @@
     
     <add key="Host" value="smtp.gmail.com"/>
     <add key="EnableSsl" value="true"/>
-    <add key="UserName" value="EmailId@gmail.com"/>  <!--value="EmailId@gmail.com"-->
-    <add key="Password" value="Password"/>  <!--value="Password"-->
+    <add key="UserName" value="rohan@mirzabros.com"/>  <!--value="EmailId@gmail.com"-->
+    <add key="Password" value="ashishA@13"/>  <!--value="Password"-->
     <add key="Port" value="587"/>
     
     <!--need a web.config key to enable the pre 4.5 validation mode-->
@@ -22,7 +22,7 @@
 
   <connectionStrings>
     <!--<add name="ConnectionString" connectionString="Data Source=LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog=FattaangDB; Integrated Security=False" providerName="System.Data.SqlClient"/>-->
-    <add name="ConnectionString" connectionString="Data Source = LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = joshi123; "
+    <add name="ConnectionString" connectionString="Data Source = DESKTOP-G7GO59L\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = ashishA@13; "
     providerName="System.Data.SqlClient"/>
     <!--Initial Catalog or database , Integrated Security= SSPI for Windows Authentication-->
   </connectionStrings>
