--- a/FattaangOnlineShopping/Web.config
+++ b/FattaangOnlineShopping/Web.config
@@ -9,14 +9,20 @@
   <appSettings>
     <add key="AdminLoginID" value="admin"/>
     <add key="AdminPassword" value="12345"/>
-    
+
+    <add key="Host" value="smtp.gmail.com"/>
+    <add key="EnableSsl" value="true"/>
+    <add key="UserName" value="EmailId@gmail.com"/><!--value="EmailId@gmail.com"-->
+    <add key="Password" value="Password"/><!--value="Password"-->
+    <add key="Port" value="587"/>
+
     <!--need a web.config key to enable the pre 4.5 validation mode-->
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
 
   <connectionStrings>
     <!--<add name="ConnectionString" connectionString="Data Source=LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog=FattaangDB; Integrated Security=False" providerName="System.Data.SqlClient"/>-->
-    <add name="ConnectionString" connectionString="Data Source = LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = joshi123; "
+    <add name="ConnectionString" connectionString="Data Source = DESKTOP-G7GO59L\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = Password; "
     providerName="System.Data.SqlClient"/>
     <!--Initial Catalog or database , Integrated Security= SSPI for Windows Authentication-->
   </connectionStrings>
