Commit with minor changes

--- a/FattaangOnlineShopping/Web.config
+++ b/FattaangOnlineShopping/Web.config
@@ -22,7 +22,7 @@
 
   <connectionStrings>
     <!--<add name="ConnectionString" connectionString="Data Source=LAPTOP-2FE2DMGC\SQLEXPRESS; Initial Catalog=FattaangDB; Integrated Security=False" providerName="System.Data.SqlClient"/>-->
-    <add name="ConnectionString" connectionString="Data Source = DESKTOP-G7GO59L\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = Password; "
+    <add name="ConnectionString" connectionString="Data Source = DESKTOP-G7GO59L\SQLEXPRESS; Initial Catalog = FattaangDB; user id = sa; password = ashishA@13; "
     providerName="System.Data.SqlClient"/>
     <!--Initial Catalog or database , Integrated Security= SSPI for Windows Authentication-->
   </connectionStrings>
